Fix some clipping with throttles
Also fixes the orientation of the throttle on webkit-based browsers.
Reduces font-size for buttons somewhat.

--- a/src/PiStellwerk/wwwroot/style/base.css
+++ b/src/PiStellwerk/wwwroot/style/base.css
@@ -26,19 +26,14 @@ button {
     border-radius: 5px;
     border-width: 0;
     padding: 8px;
-    font-size: 1.2em;
+    font-size: 1em;
     cursor: pointer;
 }
 
-output, input, label {
-    font-size: 1.2em;
+button, output, input, label {
+    font-size: 1em;
 }
 
-@media (min-width: 1024px) {
-    button, output, input, label {
-        font-size: 1em;
-    }
-}
 
 form > * {
     margin: 5px;
